--- a/style/style.css
+++ b/style/style.css
@@ -5,7 +5,7 @@ body {
 
 .navbar {
     /*background-image:linear-gradient(to bottom, rgba(59, 58, 48, 0.2), rgba(59, 58, 48, 0.2));*/
-    background-color: rgba(59, 58, 48, 0.4);
+    background-color: rgba(18, 24, 32, 0.5);
 }
 
 /*.indexPic1 {
@@ -21,6 +21,7 @@ body {
 .footer {
     background-color: rgb(18, 24, 32);
     color: white;
+    margin-top: 20px;
 }
 
 h2.header {
