--- a/style/style.css
+++ b/style/style.css
@@ -4,14 +4,9 @@ body {
 }
 
 .navbar {
-    /*background-image:linear-gradient(to bottom, rgba(59, 58, 48, 0.2), rgba(59, 58, 48, 0.2));*/
     background-color: rgba(18, 24, 32, 0.5);
 }
 
-/*.indexPic1 {
-    height: auto;
-    width: 100%;
-}*/
 
 .banner {
     height: 300px;
@@ -37,3 +32,99 @@ img.header {
     text-align: center;
     width: 100%;
 }
+
+/*contact card*/
+.icon {
+    width: 40px;
+    height: 40px;
+}
+
+.card {
+    background-color: rgb(18, 24, 32);
+}
+
+
+.contact-card {
+    position: relative;
+    font-size: 1.1rem;
+    background-color: rgb(18, 24, 32);
+}
+
+.contact-card-icon {
+    width: 80px;
+    height: 80px;
+    background-color: rgb(18, 24, 32);
+    border-radius: 50%;
+    border: 3px solid white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    top: -40px;
+    left: 100px;
+}
+
+/*----*/
+
+/*Map*/
+.card.map-card .living-coral {
+    background-color: #FEC400;
+}
+
+.card.map-card .living-coral-text {
+
+}
+
+.card-map-bg {
+    background-color: rgb(18, 24, 32);
+}
+
+.card.map-card .table th {
+    width: 2rem;
+}
+
+.card.map-card .pt-3-5 {
+    padding-top: 1.25rem;
+}
+
+.card.map-card .card-body {
+    background-color: rgb(18, 24, 32);
+    position: absolute;
+    width: 100%;
+    height: 80%;
+    top: 40%;
+    overflow: hidden;
+    background-color: transparent;
+    -webkit-transition: all 1s;
+    -o-transition: all 1s;
+    transition: all 1s;
+    -webkit-border-radius: 0 !important;
+    border-radius: 0 !important;
+}
+
+.card.map-card .card-body.closed {
+    top: 100%;
+    height: 7.5rem;
+    margin-top: -7.5rem;
+}
+
+.card.map-card .map-container {
+    overflow: hidden;
+    padding-bottom: 56.25%;
+    position: relative;
+    height: 0;
+}
+
+.card.map-card .map-container iframe {
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    position: absolute;
+}
+
+.card.map-card .button .btn-floating {
+    margin-top: -1.5rem;
+}
+
+/*----*/
