--- a/style/style.css
+++ b/style/style.css
@@ -9,8 +9,8 @@ body {
 
 
 .banner {
+    background-color: rgb(18, 24, 32);
     height: 300px;
-    width: 100%;
 }
 
 .footer {
@@ -31,6 +31,46 @@ img.header {
     top: 14%;
     text-align: center;
     width: 100%;
+}
+
+/*hamburger animation*/
+.animated-icon2 span:nth-child(1) {
+    top: 0px;
+}
+
+.animated-icon2 span:nth-child(2),
+.animated-icon2 span:nth-child(3) {
+    top: 10px;
+}
+
+.animated-icon2 span:nth-child(4) {
+    top: 20px;
+}
+
+.animated-icon2.open span:nth-child(1) {
+    top: 11px;
+    width: 0%;
+    left: 50%;
+}
+
+.animated-icon2.open span:nth-child(2) {
+    -webkit-transform: rotate(45deg);
+    -moz-transform: rotate(45deg);
+    -o-transform: rotate(45deg);
+    transform: rotate(45deg);
+}
+
+.animated-icon2.open span:nth-child(3) {
+    -webkit-transform: rotate(-45deg);
+    -moz-transform: rotate(-45deg);
+    -o-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+}
+
+.animated-icon2.open span:nth-child(4) {
+    top: 11px;
+    width: 0%;
+    left: 50%;
 }
 
 /*contact card*/
@@ -71,9 +111,7 @@ img.header {
     background-color: #FEC400;
 }
 
-.card.map-card .living-coral-text {
-
-}
+.card.map-card .living-coral-text {}
 
 .card-map-bg {
     background-color: rgb(18, 24, 32);
