--- a/style/style.css
+++ b/style/style.css
@@ -33,6 +33,12 @@ img.header {
     width: 100%;
 }
 
+/*navbar button*/
+.navbar-toggler {
+    border: 0px;
+}
+/*----*/
+
 /*contact card*/
 .icon {
     width: 40px;
