--- a/style/style.css
+++ b/style/style.css
@@ -3,10 +3,27 @@ body {
     font-size: 17px;
 }
 
+.text-justify {
+    margin: 0;
+    text-align: justify;
+}
+
+.row {
+    --bs-gutter-x: 1.5rem;
+}
+
 .navbar {
     background-color: rgba(18, 24, 32, 0.5);
 }
 
+
+.material-symbols-outlined {
+    font-variation-settings:
+        'FILL'0,
+        'wght'400,
+        'GRAD'0,
+        'opsz'48
+}
 
 .banner {
     background-color: rgb(18, 24, 32);
@@ -45,27 +62,40 @@ img.header {
     border-right: 1px solid black;
 }
 
-/*vehicle card*/
-.vehicle {
-    width: 18rem;   
+/*----*/
+
+/*carousel*/
+.carousel-image {
+    width: 100%;
+    height: auto;
 }
+
+/*---*/
+
+/*vehicle card*/
+/*.vehicle {
+    width: 300px;   
+}*/
 
 .card-vehicle {
-    height: 190px;
-    width: auto;
+    height: auto;
+    width: 100%;
 }
 
+/*vehicle modal*/
+.modal-content {
+    background-color: rgb(18, 24, 32);
+}
 
 /*contact card*/
 .icon {
-    width: 40px;
-    height: 40px;
+    width: 30px;
+    height: 30px;
 }
 
 .card {
     background-color: rgb(18, 24, 32);
 }
-
 
 .contact-card {
     position: relative;
@@ -74,17 +104,14 @@ img.header {
 }
 
 .contact-card-icon {
-    width: 80px;
-    height: 80px;
-    background-color: rgb(18, 24, 32);
+    width: 60px;
+    height: 60px;
+    /*background-color: rgb(18, 24, 32);*/
     border-radius: 50%;
     border: 3px solid white;
     display: flex;
     align-items: center;
     justify-content: center;
-    position: absolute;
-    top: -40px;
-    left: 100px;
 }
 
 /*----*/
@@ -112,8 +139,8 @@ img.header {
     background-color: rgb(18, 24, 32);
     position: absolute;
     width: 100%;
-    height: 80%;
-    top: 40%;
+    height: 100%;
+    top: 45%;
     overflow: hidden;
     background-color: transparent;
     -webkit-transition: all 1s;
@@ -150,9 +177,33 @@ img.header {
 
 /*----*/
 
-@media (max-width:767px) {
 
+.btn-vcolor {
+    display: block;
+    height: 20px;
+    width: 20px;
+    border-radius: 50%;
+    border: none;
+}
+
+.black {
+    background-color: black;
+}
+
+.white {
+    background-color: white;
+}
+
+.blue {
+    background-color: blue;
+}
+
+.red{
+    background-color: red;
+}
+@media (max-width:992px) {
     .border-teks {
         border: 0px solid !important;
     }
 }
+
