--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap');
+
 body {
     font-family: 'Source Sans Pro', sans-serif;
     font-size: 17px;
@@ -12,11 +14,6 @@ body {
     --bs-gutter-x: 1.5rem;
 }
 
-.navbar {
-    background-color: rgba(18, 24, 32, 0.5);
-}
-
-
 .material-symbols-outlined {
     font-variation-settings:
         'FILL'0,
@@ -24,16 +21,19 @@ body {
         'GRAD'0,
         'opsz'48
 }
+/*===========For Header===========*/
+.navbar {
+    background-color: rgba(18, 24, 32, 0.5);
+}
+
+/*navbar button*/
+.navbar-toggler {
+    border: 0px;
+}
 
 .banner {
     background-color: rgb(18, 24, 32);
     height: 300px;
-}
-
-.footer {
-    background-color: rgb(18, 24, 32);
-    color: white;
-    margin-top: 20px;
 }
 
 h2.header {
@@ -49,13 +49,17 @@ img.header {
     width: 100%;
 }
 
-/*navbar button*/
-.navbar-toggler {
-    border: 0px;
+
+/*======Footer=====*/
+.footer {
+    background-color: rgb(18, 24, 32);
+    color: white;
+    margin-top: 20px;
 }
 
-/*----*/
+/*=================*/
 
+/*==========For Home Page*/
 /*home teks border*/
 .border-teks {
     border-left: 1px solid black;
@@ -64,14 +68,13 @@ img.header {
 
 /*----*/
 
-/*carousel*/
 .carousel-image {
     width: 100%;
     height: auto;
 }
 
-/*---*/
 
+/*=========For Vehicle Page*/
 /*vehicle card*/
 /*.vehicle {
     width: 300px;   
@@ -87,6 +90,31 @@ img.header {
     background-color: rgb(18, 24, 32);
 }
 
+.btn-vcolor {
+    display: block;
+    height: 20px;
+    width: 20px;
+    border-radius: 50%;
+    border: none;
+}
+
+.black {
+    background-color: black;
+}
+
+.white {
+    background-color: white;
+}
+
+.blue {
+    background-color: blue;
+}
+
+.red {
+    background-color: red;
+}
+
+/*==========For Contact Page*/
 /*contact card*/
 .icon {
     width: 30px;
@@ -106,7 +134,6 @@ img.header {
 .contact-card-icon {
     width: 60px;
     height: 60px;
-    /*background-color: rgb(18, 24, 32);*/
     border-radius: 50%;
     border: 3px solid white;
     display: flex;
@@ -177,33 +204,8 @@ img.header {
 
 /*----*/
 
-
-.btn-vcolor {
-    display: block;
-    height: 20px;
-    width: 20px;
-    border-radius: 50%;
-    border: none;
-}
-
-.black {
-    background-color: black;
-}
-
-.white {
-    background-color: white;
-}
-
-.blue {
-    background-color: blue;
-}
-
-.red{
-    background-color: red;
-}
 @media (max-width:992px) {
     .border-teks {
         border: 0px solid !important;
     }
 }
-
