--- a/style/style.css
+++ b/style/style.css
@@ -21,6 +21,7 @@ body {
         'GRAD'0,
         'opsz'48
 }
+
 /*===========For Header===========*/
 .navbar {
     background-color: rgba(18, 24, 32, 0.5);
@@ -55,6 +56,16 @@ img.header {
     background-color: rgb(18, 24, 32);
     color: white;
     margin-top: 20px;
+}
+
+a.footer-link {
+    text-decoration: none;
+    color: white;
+}
+
+a.footer-link:hover {
+    color: #FEC400;
+
 }
 
 /*=================*/
@@ -123,6 +134,7 @@ img.header {
 
 .card {
     background-color: rgb(18, 24, 32);
+    color: white;
 }
 
 .contact-card {
@@ -139,6 +151,12 @@ img.header {
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.card:hover {
+    background-color: white;
+    color: rgb(18, 24, 32);
+    border: 3px solid rgb(18, 24, 32);
 }
 
 /*----*/
@@ -203,6 +221,7 @@ img.header {
 }
 
 /*----*/
+
 
 @media (max-width:992px) {
     .border-teks {
